--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ img {
 .header-page-nav{
     display: flex;
     align-items: center;
+    height: 72px;
 
 } 
 .header-logo {
@@ -102,6 +103,19 @@ img {
     color: #404bbf;
 }
 
+.nav-psevdo-element::after {
+    display: block;
+    content: '';
+    /* border: 1px solid #000; */
+    border-radius: 2px;
+    width: 48px;
+    height: 4px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    background-color: #404BBF;
+
+
+}
+
 .header-address {
     font-style: normal;
     margin-left: auto;
@@ -135,6 +149,11 @@ img {
 
 /* #region section hero */
 .hero {
+    width: 1440px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    /* background-size: cover; */
+    margin-left: auto;
+    margin-right: auto;
     background-color: #2e2f42;
     padding-top: 188px;
     padding-bottom: 188px;
@@ -190,6 +209,18 @@ img {
     gap: 24px
 }
 
+.feature-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    background: #f4f4fd;
+    margin-bottom: 8px;
+}
+
 /* .feature-title-two {} */
 .visually-hidden {
     position: absolute;
@@ -236,11 +267,14 @@ img {
 }
 
 .our-team-list {
-    /* background-color: #FFFFFF; */
     display: flex;
     gap: 24px;
-    /* width: 264px; 
-    height: 380px; */
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.social-link:hover,
+.social-link:focus {
+    background-color: #404bbf;
 }
 
 .our-team-title-two {
@@ -269,17 +303,14 @@ img {
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
     padding: 32px 0;
-    /* display: flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: 32px;
-    margin-bottom: 32px;
-    margin-left: 16px;
-    margin-right: 16px;
     gap: 8px;
-    width: 232px;
-    height: 56px; */
+    /* width: 232px;
+    height: 104px; */
+    
 }
 
 .our-team-title-three {
@@ -301,7 +332,35 @@ img {
     color: #434455;
     background-color: #FFFFFF;
     text-align: center;
-    
+}
+
+.social-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 24px;
+    width: 232px;
+    height: 40px;
+}
+
+.social-list-item {
+
+    width: 40px;
+    height: 40px;
+    /* margin-bottom: 32px; */
+}
+
+.social-link {
+    fill: #f4f4fd;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* #endregion */
 
@@ -330,7 +389,39 @@ img {
     row-gap: 48px;
 } 
 
-/* .our-portfolio-item {} */
+.img-text {
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 0;
+
+}
+
+.our-portfolio-item:hover .overlay-text {
+    transform: translateY(0%);
+}
+
+.our-portfolio-item {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.our-portfolio-item:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+
+}
 
 .our-portfolio-img {
     background-color: url("path_to_image");
@@ -376,23 +467,19 @@ img {
 .footer {
     background-color: #2e2f42;
     padding: 100px 0;
-    /* padding-top: 100px;
-    padding-bottom: 100px;
-    padding-left: 156px; */
 }
-
+.footer-logo-text {
+    width: 264px;
+    height: 112px;
+    margin-right: 120px;
+}
 .logo {
     display: inline-block;
-    /* padding-bottom: 16px;
-    padding-top: 16px; */
-    /* padding: 16px 0px; */
-    margin-bottom: 16px;
 }
 
 .footer-logo-style {
     color: #f4f4fd;
 }
-
 .footer-text {
     font-weight: 400;
     font-size: 16px;
@@ -400,6 +487,30 @@ img {
     letter-spacing: 0.02em;
     color: #f4f4fd;
     width: 264px;
-    /* margin-top: 16px; */
+    margin-top: 16px;
+}
+.social-links-footer {
+    width: 208px;
+    height: 80px;
+}
+.social-media {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-top: 0;
+    margin-bottom: 16px;
+}
+.social-list-footer {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    width: 208px;
+    height: 80px;
+}
+.social-link.footer-link:hover,
+.social-link.footer-link:focus {
+    background-color: #31d0aa;
 }
 /* #endregion */
