--- a/css/styles.css
+++ b/css/styles.css
@@ -51,11 +51,13 @@ img {
 
 .header-page {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
     display: flex;
     align-items: center;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 } 
 
 .header-page-nav{
@@ -110,14 +112,19 @@ img {
     color: #404bbf;
 }
 
-/* .header-nav-item.nav-psevdo-element {
+.nav-item-link.nav-psevdo-element {
     position: relative;
     color: #404bbf;
-} */
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-.nav-psevdo-element::after {
+.nav-item-link.nav-psevdo-element::after {
     display: block;
     content: '';
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
     /* border: 1px solid #000; */
     border-radius: 2px;
     width: 48px;
@@ -148,7 +155,10 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .address-list-link-item:hover,
 .address-list-link-item:focus {
     color: #404bbf;
@@ -161,14 +171,17 @@ img {
 
 /* #region section hero */
 .hero {
-    width: 1440px;
+    max-width: 1440px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
-    /* background-size: cover; */
+    background-size: cover;
     margin-left: auto;
     margin-right: auto;
     background-color: #2e2f42;
     padding-top: 188px;
     padding-bottom: 188px;
+    background-repeat: no-repeat;
+    background-position: center;
+
 }
 .hero-titel {
     display: flex;
@@ -201,6 +214,7 @@ img {
     margin-left: auto;
     margin-right: auto;
     margin-top: 48px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -304,6 +318,9 @@ img {
     /* background-color: #FFFFFF; */
     border-radius: 0px 0px 4px 4px;
     width: calc((100% - 72px) / 4);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);;
     
 }
 
