--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ img {
 /* #region section hero */
 .hero {
     max-width: 1440px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpg);
     background-size: cover;
     margin-left: auto;
     margin-right: auto;
